# 01-load-forecasting-blog

./: .env.example  .gitignore  Makefile  README.md  article.md  benchmark_rust.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py
app/blueprints/api/: __init__.py  routes.py
app/blueprints/main/: __init__.py  routes.py
app/seed_data/: eia_rto_load.parquet  features_hourly.parquet  fourcp_dates.parquet  load_hourly.parquet  outages.parquet  transmission_lines.parquet  weather_hourly.parquet
app/services/: data_ingestion.py  forecast_service.py  fourcp_service.py  leap_db.py  load_modeling_service.py  local_data.py  power_system_service.py  powerflow_service.py  storm_warning_service.py
app/services/fourcp/: 4CP_dates.csv  __init__.py  engine.py
app/services/models/: arima_model.py  lstm_model.py
app/services/reliability/: __init__.py  eia_benchmarks.py  metrics.py  priority.py  processing.py  rules.py
app/static/: .gitkeep
app/static/css/: site.css
app/style/: __init__.py
app/templates/: base.html  index.html  leap_dashboard.html
data/samples/: README.md
docs/: DATA_SETUP.md  DEPLOYMENT.md  MEDIUM_ARTICLE.md  POWER_FLOW_ENGINEERING_INTEGRATION.md  STELF_IMPLEMENTATION.md  STYLE.md  cyme.md  data_apis.md  data_sources.md  objective.md
rust/bench/: Cargo.toml
rust/core/: Cargo.toml
rust/py/: Cargo.toml
rust/py/src/: lib.rs
scripts/: build_elec_article_sample.py
scripts/seed/: seed_synthetic.py
scripts/setup/: setup.sh
src/: compute_kernel.py
tests/: test_basic.py  test_leap.py
(+4 files in other folders)
