[project]
name = "01-load-forecasting-blog"
version = "1.0.0"
description = "LEAP load forecasting companion for Medium article 01-load-forecasting-blog"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "Flask>=3.0.0",
 "numpy>=1.24.0",
 "pandas>=2.0.0",
 "pyarrow>=14.0.0",
 "python-dotenv>=1.0.0",
 "gunicorn>=21.0.0",
 "requests>=2.31.0",
 "scikit-learn>=1.3.0",
 "lightgbm>=4.0.0",
 "pmdarima>=2.0.0",
 "statsmodels>=0.14.0",
 "folium>=0.14.0",
 "plotly>=5.17.0",
 "ortools>=9.7.0",
 "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]
ml = [
    "torch>=2.0.0",
    "mlflow>=2.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
